chore: create docker entrypoint

--- a/simulator/docker-compose.yaml
+++ b/simulator/docker-compose.yaml
@@ -3,8 +3,8 @@ services:
   app:
     build: .
     container_name: simulator
+    entrypoint: .docker/entrypoint.sh
     volumes:
       - .:/go/src/
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
- 
